astalavee set up

--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^7.2.0",
+    "grapesjs-preset-webpage": "^0.1.11",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
     "react-intersection-observer": "^9.4.0",
