completely redesigned portofolio

--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
+    "@emotion/react": "^11.10.4",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.10.0",
+    "@mantine/core": "^5.2.6",
+    "@mantine/hooks": "^5.2.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.0",
     "@react-google-maps/api": "^2.12.2",
     "@reduxjs/toolkit": "^1.8.4",
+    "@tabler/icons": "^1.93.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
     "framer-motion": "^7.2.0",
     "grapesjs-preset-webpage": "^0.1.11",
     "jquery": "^3.6.0",
