--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
+    "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
