--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@emotion/styled": "^11.10.0",
     "@mantine/core": "^5.2.6",
     "@mantine/hooks": "^5.2.6",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.0",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^5.10.0",
     "@react-google-maps/api": "^2.12.2",
     "@reduxjs/toolkit": "^1.8.4",
